split endpoints del, upd to rc204 rc200
