# api/openapi/sanya-spb-URL-shortener-1.1.0-resolved.json
@@ -107,6 +107,59 @@
           }
         },
         "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "501": {
+            "description": "Not Implemented"
+          }
+        }
+      }
+    },
+    "/r/{uuid}": {
+      "post": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "updates Link and return updated Link",
+        "description": "method Update (in CRUD spec)",
+        "operationId": "updRetLink",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "description": "pass an uuid for updating",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Link info to update",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/r_uuid_body"
+              }
+            }
+          }
+        },
+        "responses": {
           "200": {
             "description": "Success",
             "content": {
@@ -207,6 +260,49 @@
           }
         ],
         "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          },
+          "501": {
+            "description": "Not Implemented"
+          }
+        }
+      }
+    },
+    "/delete/r/{uuid}": {
+      "delete": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "delete Link and return deleted Link",
+        "description": "method Delete (in CRUD spec)",
+        "operationId": "delRetLink",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "description": "pass an uuid to delete",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
           "200": {
             "description": "Success",
             "content": {
@@ -216,9 +312,6 @@
                 }
               }
             }
-          },
-          "204": {
-            "description": "No Content"
           },
           "400": {
             "description": "Bad Request"
@@ -522,6 +615,34 @@
         }
       },
       "uuid_body": {
+        "required": [
+          "Descr",
+          "Name",
+          "URL"
+        ],
+        "type": "object",
+        "properties": {
+          "Name": {
+            "type": "string",
+            "example": "Google"
+          },
+          "URL": {
+            "type": "string",
+            "format": "url",
+            "example": "https://google.com/index.html"
+          },
+          "Descr": {
+            "type": "string",
+            "example": "Google main page v.2"
+          },
+          "DeleteAt": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2022-02-02T22:22:22.222Z"
+          }
+        }
+      },
+      "r_uuid_body": {
         "required": [
           "Descr",
           "Name",
